# yai-infra

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: auto-label-issue.yml  auto-label-pr.yml  issue-project-status-sync.yml  project-backfill-sync.yml  project-intake-sync.yml  project-status-sync.yml  reusable-audit.yml  reusable-auto-label-issue.yml  reusable-auto-label-pr.yml  reusable-governance-suite.yml  reusable-issue-project-status-sync.yml  reusable-pr-issue-enforcement.yml  reusable-pr-milestone-sync.yml  reusable-project-backfill-sync.yml  reusable-project-intake-sync.yml  reusable-project-status-sync.yml  reusable-validate-agent-pack.yml  reusable-validate-architecture-alignment.yml  reusable-validate-changelog.yml  reusable-validate-pr-metadata.yml  reusable-validate-proof-pack.yml  reusable-validate-runbook-adr-links.yml  reusable-validate-traceability.yml  reusable-verify-github-templates.yml  reusable-verify.yml  verify-canonical-template-mirror.yml
docs/: README.md
docs/_generated/: agent-pack.v1.json  traceability.graph.v1.json  traceability.lock.v1.json
docs/governance/: github-template-residency.md  schema-residency.md
docs/migration/: yai-minimization-macro-phases.md
docs/standards/: README.md  docs-residency.md  github-template-residency.md  github-templates.md  project-automation-policy.md  yai-docs-pointer.md
docs/tooling/: README.md  github-actions-suite.md  governance-suite.md  toolkit-contract.md
migration/: move-map.yaml
migration/inventory/: yai-noncore-candidates-0.1.1.md
tools/: README.md
(+129 files in other folders)
