[project]
name = "yai-infra-tools"
version = "0.1.0-rc1"
description = "YAI governance & delivery tools"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
yai-infra-inventory = "yai_infra_tools.project.inventory:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["tools/python"]
